# ThingHound

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Merge_pull_request_#2_from_evanwieder_docs_v3-spec_docs__physical_type_mapping,_decimal_en.patch  README.md  coding_standards.md  package-lock.json  package.json  pyproject.toml
docs/dev/: crr-rules.md  crsqlite-spike-findings.md  standards-data-models.md  standards-error-handling.md  standards-python.md  standards-repository.md  standards-sql.md  standards-testing.md
docs/prototypes/: scaled_decimal_demo.py
docs/specs/: thinghound-architecture.md  thinghound-data-model.md  thinghound-functional-spec.md  thinghound-ui-design.md
migrations_sql/: 0001_ref_seed.sql
scripts/: check_crr_rules.py
src/thinghound/: __init__.py  errors.py  migrations.py  money.py  registry.py  scaled_value.py  session.py  types.py  version.py
tests/: test_category_model.py  test_code_row.py  test_db_connection.py  test_migrations.py  test_money.py  test_scaled_value.py  test_schema_service.py  test_session_and_registry.py  test_temporal.py  test_types.py  test_unit_normalization.py  test_user_model.py
tests/db/: test_connection.py  test_migrations.py
tests/mappers/: test_attribute_category_mapper.py  test_attribute_definition_mapper.py  test_prefix_mapper.py  test_prefix_set_mapper.py  test_unit_dimension_mapper.py  test_unit_multiplier_mapper.py
tests/ui/: test_bridge_contract.py
tests/value/: test_normalize.py  test_quantity.py  test_scaled_value.py
ui/: index.html  styles.css
ui/src/: bridge-api.js  filterstrip.js  fixtures.js  (+6 more)
(+56 files in other folders)
